# di-test

./: CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
di_test/charts/: data_bar_chart.py  data_drill_down.py  data_multi_drill_down.py  example_bar_chart.py  example_bar_chart_json.py  example_multi_drill_down.py  exmple_drill_down_chart.py
di_test/ontology/: department.py  employee.py
di_test/pipelines/: pipeline_1.py
di_test/tables/: demotable.json
di_test/tasks/: task_set.py  task_set_2.py
docs/: index.md  modules.md
tests/: test_foo.py
